--- a/7.1-LiveCoding_read_write_solutions.ipynb
+++ b/7.1-LiveCoding_read_write_solutions.ipynb
@@ -5,7 +5,7 @@
    "id": "95b95509",
    "metadata": {},
    "source": [
-    "# Webinar: Read and Write a .txt File (solutions)\n",
+    "# LiveCoding: Read and Write a .txt File (solutions)\n",
     "\n",
     "by [Luciano Gabbanelli](https://www.linkedin.com/in/luciano-gabbanelli-ph-d-75302218)"
    ]
